[package]
name = "yamm-sys"
version = "0.1.0"
edition = "2021"
build = "build.rs"
authors = ["erihsu@139.com"]
description = "YAMM(yet another memory mangement) rust binding"
license = "LICENSE-APACHE"
repository = "https://github.com/eda-rs/yamm-sys"
readme = "README.md"
exclude = "/yamm"

# Reference
# https://medium.com/dwelo-r-d/using-c-libraries-in-rust-13961948c72a
# https://doc.rust-lang.org/nomicon/ffi.html

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[build-dependencies]
bindgen = "0.69"
